--- a/style.css
+++ b/style.css
@@ -63,7 +63,9 @@ body {
     background: linear-gradient(135deg, #2a2a2a, #003087);
     padding: 40px 30px;
     border-radius: 20px;
-    max-width: 90vw;
+    /* max-width: 90vw; */
+    width: 100%;
+    height: 100%;
 }
 
 #start-screen h1 {
